--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
-}
+.App-wrapper{
+  display: grid;
+  width: 1200px;
+  margin: auto;
+grid-template-areas:  /*расположение строк*/
+  'h h '
+  'n c';
+  grid-template-rows: 60px 1fr; /*сколько строк*/
+  grid-template-columns: 2fr 10fr;/*сколько колонок*/
+  grid-gap: 10px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header{
+grid-area: h;
+  background-color: beige;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav{
+  grid-area: n;
+  background-color: darkslateblue;
 }
-
-.App-link {
-  color: #61dafb;
+.content{
+  grid-area: c;
+  background-color: darkseagreen;
 }
+.header img{
+  width: 60px;
+}
+.content img{
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
